2003-10-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: rhythmbox is back on HEAD.

2003-10-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added jamboree.

2003-10-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched.

2003-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched.

2003-10-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: metacity has been branched.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gpdf has been branched.

2003-10-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprint and libgnomeprintui
	have been branched (without anyone being told).

2003-10-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added rmm-utils.

2003-10-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed 1.4 core section. It's not
	used anyway.

2003-10-03  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Removed gedit-plugins from gnome-2.4, I
	think that's the problem with the segfault.

2003-10-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gcalctool has been branched
	(without anyone being told).

2003-10-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed pybliographer branch.

2003-10-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed some 1.4 versions.

2003-10-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add the 2.6 modules.

2003-09-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnome, libgnomecanvas and
	libgnomeui have been branched.

2003-09-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: rhythmbox has been branched.

2003-09-28  Carlos Perelló Marín <carlos@gnome.org>

	* status-gnome.xml: Added a default team information.
