@@ -163,6 +163,24 @@
       </component>
     </version>
   </module>
+  <module name="beast">
+    <version release="gnome-2.6">
+      <component name="beast" dir="beast" group="extras">
+        <podir dir="po"/>
+        <potname name="beast.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+      <component name="bse" dir="beast" group="extras">
+        <podir dir="po-bse"/>
+        <potname name="bse.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="bonobo-config">
     <version release="gnome-2.6">
       <component name="bonobo-config" dir="bonobo-config" group="extras">
