@@ -1,3 +1,7 @@
+2003-10-15  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added beast/bse.
+
 2003-10-13  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: rhythmbox is back on HEAD.
